--- a/Web/packages.config
+++ b/Web/packages.config
@@ -1,20 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Mvc.zh-Hans" version="5.2.4" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Razor.zh-Hans" version="3.2.4" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi" version="5.2.4" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Client.zh-Hans" version="5.2.4" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Core.zh-Hans" version="5.2.4" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.WebHost.zh-Hans" version="5.2.4" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebPages.zh-Hans" version="3.2.4" targetFramework="net452" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net452" />
-  <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net452" developmentDependency="true" />
+  <package id="log4net" version="2.0.8" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.6" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Mvc.zh-Hans" version="5.2.6" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.6" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Razor.zh-Hans" version="3.2.6" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.6" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client.zh-Hans" version="5.2.6" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core.zh-Hans" version="5.2.6" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.6" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.WebHost.zh-Hans" version="5.2.6" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages.zh-Hans" version="3.2.6" targetFramework="net452" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net452" />
+  <package id="Microsoft.Net.Compilers" version="2.8.2" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net452" />
+  <package id="mySqlSugar" version="3.5.3.4" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
+  <package id="Quartz" version="3.0.5" targetFramework="net452" />
 </packages>
